--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>astro</title>
-</head>
-<body>
-    <h1>astro</h1>
-</body>
+    <link href="style.css">
+<body class="conteúdo">
+    <h1 class="título">astro</h1>
+</body  
 </html>
